# ERLA_base

./: .env.example  .gitignore  README.md  VIDEO_SCRIPT.md  main.py  pyproject.toml  run_research_live.py  test_config.py  test_integration.py  test_semantic_scholar.py
convex/: events.ts  graph.ts  schema.ts  sessions.ts
convex/_generated/: api.d.ts
convex/chat/: actions.ts  agent.ts  messages.ts  threads.ts  tools.ts  validation.ts
docs/: RLM_pipeline.md  agent_architecture.md
src/: __init__.py  cli.py  settings.py  summarize.py
src/arxiv/: __init__.py  adapters.py  client.py
src/config/: __init__.py  factory.py  loader.py  models.yaml
src/llm/: __init__.py  adapters.py  completion.py  protocols.py
src/orchestration/: __init__.py  branch_manager.py  inner_loop.py  iteration_loop.py  managing_agent.py  master_agent.py  models.py  overseer.py  protocols.py  query_planner.py  reflection.py  state_store.py  tools.py
src/paper_sources/: __init__.py  bridge.py  composite.py  deduplication.py
src/semantic_scholar/: __init__.py  adapters.py  client.py  models.py  protocols.py  search.py
src/storage/: convex_client.py
src/tools/: __init__.py  paper_tools.py
viewer/: .gitignore  package.json
viewer/src/: App.tsx
viewer/src/components/: DetailPanel.tsx  EventFeed.tsx  ReplayControls.tsx  ResearchGraph.tsx  StatsPanel.tsx
viewer/src/components/chat/: ChatInput.tsx  ChatInterface.tsx  ChatMessage.tsx  ChatMessageList.tsx  ChatView.tsx  CitationCard.tsx  (+4 more)
viewer/src/hooks/: index.ts  useReplayController.ts  useReplayGraph.ts  useStreamingChat.ts
