[project]
name = "ic-hack-26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pymupdf>=1.24",
    "openai>=1.0",  # OpenRouter uses OpenAI-compatible API
    "lettucedetect>=0.1.8",  # Token-level hallucination detection
    "transformers>=4.40",  # NLI model
    "torch>=2.0",  # PyTorch backend
    "pyyaml>=6.0",  # YAML config loading
]
