[project]
name = "ic-hack-26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pymupdf>=1.24",
    "openai>=1.0",  # OpenRouter uses OpenAI-compatible API
    "anthropic>=0.40",  # Anthropic API client
    "lettucedetect>=0.1.8",  # Token-level hallucination detection
    "transformers>=4.40",  # NLI model
    "torch>=2.0",  # PyTorch backend
    "pyyaml>=6.0",  # YAML config loading
    "fastapi>=0.115",  # HTTP server for HaluGate
    "uvicorn>=0.34",  # ASGI server
    "arxiv>=2.1",  # arXiv API wrapper
    "typer>=0.9",  # CLI framework
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.scripts]
erla = "src.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
